# stt

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  build.ps1  build_windows.py  cliff.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: release.sh
src/stt/: audio.py  cli.py  client.py  compat.py  config.py  core.py  daemon.py  hotkey_dialog.py  log.py  output.py  toggle.py  transcribe.py  tray.py  typing.py
tests/: test_audio.py  test_client.py  test_compat.py  test_config.py  test_core.py  test_hotkey_dialog.py  test_toggle.py  test_tray.py
