[project]
name = "stt"
version = "0.2.0"
description = "Speech-to-text using faster-whisper + CUDA"
readme = "README.md"
license = "MIT"
authors = [
    { name = "ahacad", email = "ahacadev@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0",
    "sounddevice>=0.5",
    "soundfile>=0.12",
    "soxr>=1.0",
    "numpy>=1.26,<2",
]

[project.optional-dependencies]
windows = [
    "pynput>=1.7",
    "pystray>=0.19",
    "Pillow>=10.0",
]

[project.scripts]
stt = "stt.cli:main"
stt-daemon = "stt.daemon:main"
stt-record = "stt.audio:record_to_file_cli"
stt-toggle = "stt.toggle:main"
stt-transcribe = "stt.transcribe:main"

[project.gui-scripts]
stt-tray = "stt.tray:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
